@@ -1,3 +1,8 @@
+(04/07/14)
+==========
+
+· Added Others > Install GCC 4.7 on Raspberry Pi
+
 (03/07/14)
 ==========
 
